--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
             non_contextual_creation: true
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://192.168.2.133:5432/iwb
+    url: jdbc:postgresql://localhost:5432/inscada
     username: iwb
     password: 1907
 
